# engineers/03-implementations/backend/src/main/java/com/arcade/stadium/domain/dto/InsertCoinRequest.java
@@ -1,0 +1,7 @@
+package com.arcade.stadium.domain.dto;
+
+import java.util.UUID;
+
+public record InsertCoinRequest(
+        UUID playerId
+) {}
